--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/RoninCorp/SekaiRoshi/issues"
   },
-  "homepage": "https://github.com/RoninCorp/SekaiRoshi#readme"
+  "homepage": "https://github.com/RoninCorp/SekaiRoshi#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3"
+  }
 }
